--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "postcss": "^8",
