--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "postcss": "^8",
